--- a/index.html
+++ b/index.html
@@ -26,80 +26,80 @@
             <div class="search bg-white"><input type="search" placeholder="&#128269; Search" class="form-control"
                     id="search-bar"></div>
             <div class="menu ps-2 bg-white d-flex align-content-center justify-content-around position-relative ">
-                <div>
+                <div class="">
                     <a href="#">
-                        <i class="fa-solid fa-list text-black"></i>
+                        <i class="fa-solid fa-list"></i>
                     </a>
                 </div>
                 <div>
                     <a href="#">
-                        <i class="fa-solid fa-circle-question text-black "></i>
+                        <i class="fa-solid fa-circle-question "></i>
                     </a>
                 </div>
                 <div>
-                    <a href="#"><i class="fa-solid fa-ellipsis-vertical text-black"></i>
+                    <a href="#"><i class="fa-solid fa-ellipsis-vertical"></i>
                     </a>
                 </div>
                 <div class="menu_slide">
                     <a href="#"><i class="fa-solid fa-bell" style="color: #FFD43B;"></i>
                     </a>
                     <ul>
-                        <li><a class="menu_vertical border-black" href="#">Profilo</a></li>
-                        <li><a class="menu_vertical border-black" href="#">Fatturazione</a></li>
-                        <li><a class="menu_vertical border-black" href="#">Logout</a></li>
+                        <li><a class="menu_vertical border-black text-uppercase fw-bolder " href="#">Profilo</a></li>
+                        <li><a class="menu_vertical border-black text-uppercase fw-bolder " href="#">Fatturazione</a></li>
+                        <li><a class="menu_vertical border-black text-uppercase fw-bolder " href="#">Logout</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </header>
     <div class="wrapper vh-100 w-100 d-flex">
-        <nav class="d-flex flex-column justify-content-between align-items-center ">
-            <div class="nav_top">
-                <div class="d-flex pt-4">
-                    <div class="font_nav">
+        <nav id="nav-bar" class="d-flex flex-column justify-content-between align-items-center ">
+            <div class="nav_top pt-4">
+                <div class="d-flex pb-2 pt-2 px-3">
+                    <div class="font_nav pe-1">
                         <a href="#main" class="text-white text-decoration-none">
-                            <i class="fa-solid fa-house text-white"></i>
+                            <i class="fa-solid fa-house"></i>
                         </a>
                     </div>
-                    <div class="">
+                    <div class="ps-2">
                         <a href="#main" class="text-white text-decoration-none">
                             Home
                         </a>
                     </div>
                 </div>
-                <div class="d-flex justify-content-center align-content-center py-4 ">
-                    <div class="font_nav">
+                <div class="d-flex pb-2 pt-2 px-3">
+                    <div class="font_nav pe-2 ">
                         <a href="#main" class="text-white text-decoration-none">
                             <i class="fa-solid fa-chart-simple"></i>
                         </a>
                     </div>
-                    <div class="">
+                    <div class="ps-2 ">
                         <a href="#main" class="text-white text-decoration-none">
                             Stats
                         </a>
                     </div>
                 </div>
-                <div class="d-flex ">
-                    <div class="font_nav">
+                <div class="d-flex pb-2 pt-2 px-3">
+                    <div class="font_nav pe-1 ">
                         <a href="#main" class="text-white text-decoration-none">
                             <i class="fa-solid fa-signal"></i>
                         </a>
                     </div>
-                    <div class="">
+                    <div class="ps-2 ">
                         <a href="#main" class="text-white text-decoration-none">
                             Signals
                         </a>
                     </div>
                 </div>
             </div>
-            <div class="nav_bottom pb-4">
+            <div class="nav_bottom pb-2 pt-2 px-3">
                 <div class="d-flex">
-                    <div class="font_nav">
+                    <div class="font_nav pe-2 ">
                         <a href="#main" class="text-white text-decoration-none">
                             <i class="fa-solid fa-gear"></i>
                         </a>
                     </div>
-                    <div class="">
+                    <div class="ps-2 ">
                         <a href="#main" class="text-white text-decoration-none">
                             Admin
                         </a>
