--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                     <img src="img/logo.svg" alt="Logo">
                 </a>
                 <a href="#" id="mobile_logo" class="img-fluid">
-                        <img src="img/mobile-logo.png" style="height: 50px; width: 50px;" alt="Logo-mobile">
+                    <img src="img/mobile-logo.png" style="height: 50px; width: 50px;" alt="Logo-mobile">
                 </a>
             </div>
             <div class="search bg-white"><input type="search" placeholder="&#128269; Search" class="form-control"
                     id="search-bar"></div>
-            <div class="menu ps-2 bg-white d-flex align-content-center justify-content-around position-relative ">
+            <div class="menu ps-2 bg-white d-flex align-content-center justify-content-around position-relative  ">
                 <div class="">
                     <a href="#">
                         <i class="fa-solid fa-list"></i>
@@ -108,7 +108,43 @@
             </div>
         </nav>
         <main id="main" class="f_d-debug">
-            <div class="container-fluid h-100 overflow-y-auto">
+            <div class="h-100 overflow-y-auto f_d-debug">
+                <div class="nav-orizzontal d-flex f_d-debug">
+                    <div class="w-50 d-flex flex-column justify-content-center ps-5  ">
+                            <div class="d-flex gap-1 mb-3 ">
+                                <h1 class="text-white fs-2 ">Boolean</h1>
+                                <button type="button" class="btn btn-primary">Piano Blaze</button>
+                            </div>
+                            <div class="d-flex gap-1 mt-3 ">
+                                <button type="button" class="btn btn-primary">3 App</button>
+                                <a href="#main"><i class="fa-solid fa-angles-right text-white "></i></a>
+                                <button type="button" class="btn btn-primary">Boolean Mobile App</button>
+                                <button type="button" class="btn btn-primary">Boolean Web App</button>
+                                <button type="button" class="btn btn-primary">Boolean Blog App</button>
+                            </div>
+                    </div>
+                    <div class="w-25 text-white d-flex flex-column justify-content-center ">
+                        <h5>Studenti Online negli ultimi 30 minuti</h5>
+                        <p class="fs-1 ">125</p>
+                    </div>
+                    <div class="w-25 text-center d-flex align-items-center justify-content-start gap-3  pb-5 ">
+                        <p class="me-4 ">
+                            <h5 class="text-white ">Nuovo studente</h5>
+                        </p>
+                        <p>
+                            <button type="button" id="f-d-button" class="btn btn-outline-light"><i class="fa-solid fa-plus"></i></button>
+                        </p>
+                    </div>
+                </div>
+                <div class="d-flex">
+                    <div class="container-main-left f_d-debug">
+
+                   </div>
+                    <div class="container-main-right f_d-debug">
+                        
+                    </div>
+                </div>
+
 
             </div>
 
